D8ISUTHEME-55 Fixed the scaling of the footer logo on IE 11

--- a/css/theme.css
+++ b/css/theme.css
@@ -995,6 +995,7 @@ a.tabledrag-handle .handle {
   background: #f3f3f3;
 }
 .isu-footer-logo {
+  width: 100%;
   max-width: 180px;
 }
 
